[build-system]
requires = ["scikit-build-core[pyproject]>=0.10.0", "nanobind>=2.5.0"]
build-backend = "scikit_build_core.build"

[project]
name = "fenics-basix"
version = "0.10.0.dev0"
description = "Basix Python interface"
readme = "../README.md"
requires-python = ">=3.9"
license = { file = "../LICENSE" }
authors = [
    { email = "fenics-steering-council@googlegroups.com" },
    { name = "FEniCS Steering Council" },
]
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
docs = ["markdown", "pylit3", "pyyaml", "sphinx", "sphinx_rtd_theme"]
lint = ["ruff"]
optional = ["numba", "fenics-ufl@git+https://github.com/fenics/ufl"]
test = ["pytest", "sympy", "scipy", "matplotlib", "fenics-basix[optional]"]
ci = ["mypy", "pytest-xdist", "fenics-basix[docs,lint,test,optional]"]

[tool.mypy]
# Suggested at https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
# Goal would be to make all of the below True long-term
disallow_untyped_defs = false
disallow_any_unimported = false
ignore_missing_imports = true # TODO: remove
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = false
warn_unused_ignores = false
show_error_codes = true

[tool.ruff]
line-length = 100
indent-width = 4
extend-exclude = ["_basixcpp.pyi"]

[tool.scikit-build]
wheel.packages = ["basix"]
wheel.license-files = ["../LICENSE"]
